--- a/build.gradle
+++ b/build.gradle
@@ -27,4 +27,6 @@ task clean(type: Delete) {
 
 ext {
     dagger_version = '2.30.1'
+    coroutine_version = '1.3.9'
+    androidx_lifecycle = '2.2.0'
 }
